Restructuring web app code
Created the HTML structure, created the home class in JS that manages the HTML

--- a/Frontend/src/main.scss
+++ b/Frontend/src/main.scss
@@ -1,7 +1,3 @@
-.header {
-    color: pink;
+@import "./Pages/Home/home";
+@import "./Pages/ItineraryPlanner/itinerary-planner";
 
-    &:hover {
-        background-color: yellow;;
-    }
-}
