Created trip preview component
Trip preview component is created seperately from itinerary page, so that it is more maintainable & possibly reusable.

--- a/Frontend/src/main.scss
+++ b/Frontend/src/main.scss
@@ -1,3 +1,6 @@
+// Pages
 @import "./Pages/Home/home";
 @import "./Pages/ItineraryPlanner/itinerary-planner";
 
+// Components
+@import "./Components/TripPreview/trip-preview";
