Created navigations & finished home page styling
Created Mobile Navigation component, Desktop Navigation component & finished it's styling, along side homepage styling.

--- a/Frontend/src/main.scss
+++ b/Frontend/src/main.scss
@@ -4,3 +4,9 @@
 
 // Components
 @import "./Components/TripPreview/trip-preview";
+@import "./Components/MobileNavigation/mobile-navigation";
+@import "./Components/DesktopNavigation/desktop-navigation";
+@import "./Components/Buttons/buttons";
+
+// Shared
+@import "shared";
