--- a/Frontend/src/_shared.scss
+++ b/Frontend/src/_shared.scss
@@ -14,6 +14,15 @@ $blue: #1BA8F1;
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1200px;
 
+// mixin
+@mixin padded-container {
+    position: relative;
+    height: 100%;
+    padding: 0 3rem;
 
+    @media screen and (min-width: $tablet-breakpoint) {
+        padding: 0 5rem;
+    }
+}
 
 
