--- a/Frontend/src/main.scss
+++ b/Frontend/src/main.scss
@@ -7,6 +7,7 @@
 @import "./Components/MobileNavigation/mobile-navigation";
 @import "./Components/DesktopNavigation/desktop-navigation";
 @import "./Components/Buttons/buttons";
+@import "./Components/HeroBanner/hero-banner";
 
 // Shared
 @import "shared";
