--- a/Frontend/src/Components/DesktopNavigation/_desktop-navigation.scss
+++ b/Frontend/src/Components/DesktopNavigation/_desktop-navigation.scss
@@ -1,22 +1,31 @@
-@import "shared";
+@import 'shared';
 
 .component-desktop-navigation {
-    ul {
-        display: none;
-        color: $white;
-        font-family: $body-text;
-        font-weight: 100;
-        font-size: 1.25rem;
+  ul {
+    display: none;
+    color: $white;
+    font-family: $body-text;
+    font-weight: 100;
+    font-size: 1.25rem;
 
-        @media screen and (min-width: $tablet-breakpoint) {
-            display: flex;
-            margin: 4rem 0;
-        }
-
-        li {
-            margin: 1rem;
-            line-height: 1.5rem;
-            cursor: pointer;
-        }
+    @media screen and (min-width: $tablet-breakpoint) {
+      display: flex;
+      margin: 4rem 0;
     }
+
+    li {
+      margin: 1rem;
+      line-height: 1.5rem;
+      cursor: pointer;
+      list-style-type: none;
+
+      #component-desktop-navigation-account-button {
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        // left: 1035px;
+        top: 4.5rem;
+      }
+    }
+  }
 }
