completed POI Info Model popup

--- a/Frontend/src/styles/_shared.scss
+++ b/Frontend/src/styles/_shared.scss
@@ -1,7 +1,8 @@
 // fonts
 $logo: "Pacifico", cursive;
-$page-heading: "Libre Franklin", san serif;
+$page-heading: "Libre Franklin", sans-serif;
 $body-text: "Josefin Sans", sans-serif;
+$description: "Open Sans";
 
 // colours
 $white: #ffffff;
